# VisualNovelRecommender

./: README.md  csv_reader.rs  package-lock.json
database/: TIMESTAMP  import.sql
database/db/: anime  anime.header  chars_traits.header  chars_vns  docs  docs.header  images.header  producers  producers_relations  producers_relations.header  quotes  quotes.header  releases.header  releases_images  releases_images.header  releases_media  releases_media.header  releases_platforms  releases_platforms.header  releases_producers  releases_producers.header  releases_supersedes  releases_supersedes.header  releases_titles.header  releases_vn  releases_vn.header  rlists.header  staff  staff.header  staff_alias  staff_alias.header  tags  tags.header  tags_parents  tags_vn  tags_vn.header  traits  traits.header  traits_parents  traits_parents.header  (+12 more)
my_rust_backend/: Cargo.toml  package-lock.json
my_rust_backend/my_react_frontend/: package-lock.json  package.json
my_rust_backend/my_react_frontend/src/: App.css  App.js  VNAPI.css  VNapi.js
my_rust_backend/src/: csv_reader.rs  graph.rs  main.rs  test.rs
