[package]
name = "my_rust_backend"
version = "1.0.0"
edition = "2021"
documentation = "https://github.com/timacias/VisualNovelRecommender"

[dependencies]
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3.4", features = ["cors"] }
csv = "1.3.0"
