[package]
name = "my_rust_backend"
version = "1.0.0"
authors = ["Sarah Tran", "Justin Ming", "Timothy Macias"]
edition = "2021"
description = "Uses VNDB to create a weighted graph of (mostly) SFW novels"
readme = ../README.md
repository = "https://github.com/timacias/VisualNovelRecommender"
license = AGPL-3.0-or-later
license-file = ../LICENSE

[dependencies]
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3.4", features = ["cors"] }
csv = "1.3.0"
